--- a/网络编程/4. BIO编程.md
+++ b/网络编程/4. BIO编程.md
@@ -14,7 +14,7 @@
      例如：如果 内核缓冲区中没有数据可读，则阻塞当前线程，直到 内核线程中有数据可读，随后，将当前线程阻塞，并将 内核缓冲区中的数据拷贝到 用户缓冲区中。拷贝完成后，用户线程唤醒，继续之后后续逻辑。
      ```
 
-  2. **网络 方面**：不同的是，Java BIO 封装了 Socket，能够完成 端对端 数据通信。
+  2. **网络方面**：不同的是，Java BIO 封装了 Socket，能够完成 端对端 数据通信。
 
      + 服务端和客户端之间使用 socket 通信。
 
@@ -124,11 +124,11 @@
 
        ```c
        // 下列内容在: openjdk-jdk8u-jdk8u_vscode/jdk/src/solaris/native/java/net/linux_close.c
-
+     
        int NET_Send(int s, void *msg, int len, unsigned int flags) {
          BLOCKING_IO_RETURN_INT( s, send(s, msg, len, flags) );
        }
-
+     
        #define BLOCKING_IO_RETURN_INT(FD, FUNC) {
            int ret;
            threadEntry_t self;
@@ -191,7 +191,7 @@
               }
           }
       }
-
+  
       public static int genPort(String... args) {
           try {
               if (args.length > 0) {
@@ -202,13 +202,13 @@
           }
           return 9999;
       }
-
+  
       private static class Handler implements Runnable {
           Socket socket;
           Handler(Socket socket) {
               this.socket = socket;
           }
-
+  
           @Override
           public void run() {
               BufferedReader reader = null;
@@ -220,10 +220,10 @@
                   while (true) {
                       System.out.println("server reading...");
                     
-                    	// ------------------------------------------------------------------------
+                    	// ------------------------------------
                     	// BIO 特性 ：用户线程阻塞，直到数据拷贝到用户缓冲区
                     	// reader.readLine() --> socketInputStream.socketRead0() [native 方法]
-                    	// ------------------------------------------------------------------------
+                    	// ------------------------------------
                  
                       // 服务端接收信息
                       if ((readMsg = reader.readLine()) == null) {
@@ -231,10 +231,10 @@
                       }
                       System.out.println("Server ：接收到消息：" + readMsg);
                     
-                    	// ------------------------------------------------------------------------
+                    	// ------------------------------------
                     	// BIO 特性 ：用户线程阻塞，直到数据从用户缓冲区拷贝到内核缓冲区
                     	// writer.println() --> socketOutputStream.socketWrite0() [native 方法]
-                    	// ------------------------------------------------------------------------
+                    	// ------------------------------------
                     
                       // 服务端通知客户端，已经获取到消息
                       writer.println("server recive : " + readMsg);
@@ -268,7 +268,7 @@
           Socket socket = null;
           BufferedReader reader = null;
           PrintWriter writer = null;
-
+  
           Scanner in = new Scanner(System.in);
           try {
               // 客户端 启动Socket：与服务端建立连接请求（host,port是服务端）
@@ -302,7 +302,7 @@
           }
       }
   }
-
+  
   ```
 
 ##### 优化
@@ -326,7 +326,7 @@
       ServerSocket serverSocket = null;
       // ---------变化1：创建线程池
       ExecutorService pool = Executors.newFixedThreadPool(50);
-
+  
       try {
           serverSocket = new ServerSocket(port);
           System.out.println("Server : server started");
@@ -349,3 +349,8 @@
   }
   ```
 
+##### 缺点
+
+1. 需要为每个线程的调用栈分配内存，默认值为64KB～1MB，具体取决于操作系统。
+2. 即使Java虚拟机在物理上可以支持大量线程，但是远在达到该极限之前，上下文切换所带来的开销就会带来麻烦。例如在达到10000个连接时。
+3. 在任何时候都有可能存在大量线程处于休眠状态，只是等待输入或者输出数据就绪。
